# windows_hotkey_checker

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
src/windows_hotkey_checker/: __main__.py  hotkeys.py
tests/: all_the_hotkeys.py  test.py  test_hotkey_checker.py
